fix dark mode colors

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,7 +17,10 @@
   --ifm-color-primary-lightest: #4a6cf6;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-  --ifm-navbar-background-color: #1e232e;
+  --ifm-color-header-background: #b6c4fb;
+  --ifm-color-dark-gray: #1b1b1d;
+  --ifm-color-green: #6de986;
+  --ifm-color-documentation-title: #4a6cf6;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -30,5 +33,8 @@
   --ifm-color-primary-lighter: #4a6cf6;
   --ifm-color-primary-lightest: #4a6cf6;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
-  --ifm-navbar-background-color: #1e232e;
+  --ifm-color-header-background: #1e232e;
+  --ifm-color-dark-gray: #1b1b1d;
+  --ifm-color-green: #6de986;
+  --ifm-color-documentation-title: #6de986;
 }
